--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,13 @@
         "paths": {
             "~/*": ["src/*"]
         },
-        "lib": ["ESNext", "DOM"]
+        "lib": ["ESNext", "DOM"],
+        "plugins": [
+            { "transform": "typescript-transform-paths" },
+            {
+                "transform": "typescript-transform-paths",
+                "afterDeclarations": true
+            }
+        ]
     }
 }
