--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
         image: "divlook/node:v1.0.2"
         container_name: "create-element"
         network_mode: "bridge"
-        volumes:
-            - ".:/app"
+        ports: ['3000']
+        volumes: [".:/app"]
         working_dir: "/app"
         stdin_open: true
         tty: true
